plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'idea'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.1"
    }
}

group = 'io.pentacore'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


// QueryDSL 설정
def qdslMainDir = "$buildDir/generated/querydsl/main"
def qdslTestDir = "$buildDir/generated/querydsl/test"

def queryDslVersion = "7.0" // 25년 7월 기준 가장 최신
def querydslSrcDir  = layout.buildDirectory.dir("generated/querydsl").get().asFile // build/generated/querydsl

tasks.withType(JavaCompile).configureEach {
    options.getGeneratedSourceOutputDirectory().set(file(querydslSrcDir))
}

sourceSets {
    main {
        java {
            srcDirs += qdslMainDir
        }
    }
    test {
        java {
            srcDirs += qdslTestDir
        }
    }
}
configurations {
    querydsl.extendsFrom compileClasspath
}
//

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation "org.springframework.retry:spring-retry"
    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0")
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'

    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    implementation("me.paulschwarz:spring-dotenv:3.0.0")

    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testImplementation 'com.h2database:h2'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    //DTO 검증 NotBlank 등에 쓰인다
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'

    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    implementation platform("software.amazon.awssdk:bom:2.25.4") // 버전 통일
    implementation "software.amazon.awssdk:s3"                    // S3 클라이언트


    implementation("net.logstash.logback:logstash-logback-encoder:7.4")


    implementation('net.dv8tion:JDA:5.0.0-beta.20') {
        exclude module: 'opus-java'
        exclude module: 'tink'}

    implementation "net.ttddyy:datasource-proxy:1.10"
    implementation "com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:1.9.2"

    //Querydsl 추가
    implementation("io.github.openfeign.querydsl:querydsl-jpa:$queryDslVersion")
    annotationProcessor("io.github.openfeign.querydsl:querydsl-apt:$queryDslVersion:jpa")

}

tasks.named('test') {
    useJUnitPlatform()
}
